project (LIB_SLOTTED_UDP)

set( CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")

include_directories(${LIB_SLOTTED_UDP_SOURCE_DIR}/.)

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -pthread" )

# LIBRARY SOURCE CODE
file (GLOB_RECURSE SLOTTED_UDP_SRC ${LIB_SLOTTED_UDP_SOURCE_DIR}/*.c*)
file (GLOB_RECURSE SLOTTED_UDP_HEADERS ${LIB_SLOTTED_UDP_SOURCE_DIR}/*.h)

add_library( sudp STATIC ${SLOTTED_UDP_SRC} ${SLOTTED_UDP_HEADERS} )

target_link_libraries( sudp ${DEPS} )
